# FOCPproject

./: .gitignore  CMakeLists.txt  QRticketingSystem.sln  QRticketingSystem.vcxproj  README.md  config.json
dependencies/debug/lib/: cares.lib  drogon.lib  hpdf.lib  jsoncpp.lib  libecpg.lib  libecpg_compat.lib  libpgcommon.lib  libpgport.lib  libpgtypes.lib  libpq.lib  lz4d.lib  trantor.lib
dependencies/lib/: drogon.lib  jsoncpp.lib
dependencies/share/drogon/drogon/: vcpkg.spdx.json  vcpkg_abi_info.txt
src/: DateUtils.hpp  HtmlTemplate.h  MailService.cpp  MailService.h  PostgresDB.hpp  QRPDFGenerator.cpp  QRPDFGenerator.hpp  UUID.hpp  main.cpp  ticket_email.html
